--- a/App_LocalResources/es/my_issues.aspx.es.resx
+++ b/App_LocalResources/es/my_issues.aspx.es.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BoundFieldResource1.HeaderText" xml:space="preserve">
-    <value>Solicitado</value>
+    <value>Creado</value>
   </data>
   <data name="gvGroupResource1.EmptyDataText" xml:space="preserve">
     <value>Su grupo no tiene ningún ticket abierto o asignado en el que usted esté participando.</value>
