--- a/App_LocalResources/es/new_ticket.aspx.es.resx
+++ b/App_LocalResources/es/new_ticket.aspx.es.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="btnSubmitResource1.Text" xml:space="preserve">
-    <value>Solicitar</value>
+    <value>Crear Ticket</value>
   </data>
   <data name="litAssignToResource1.Text" xml:space="preserve">
     <value>Asignado a</value>
@@ -163,7 +163,7 @@
     <value>ha sido notificado de su solicitud</value>
   </data>
   <data name="litTicketSubmittedTitleResource1.Text" xml:space="preserve">
-    <value>Ticket Solicitado</value>
+    <value>Ticket creado!</value>
   </data>
   <data name="OriginallyAssignedTo" xml:space="preserve">
     <value>Asignado originalmente a</value>
