--- a/App_LocalResources/es/search.aspx.es.resx
+++ b/App_LocalResources/es/search.aspx.es.resx
@@ -139,7 +139,7 @@
     <value>Título</value>
   </data>
   <data name="litToResource1.Text" xml:space="preserve">
-    <value>Para</value>
+    <value>Hasta</value>
   </data>
   <data name="litUserResource1.Text" xml:space="preserve">
     <value>Usuario</value>
