--- a/admin/App_LocalResources/es/info.aspx.es.resx
+++ b/admin/App_LocalResources/es/info.aspx.es.resx
@@ -150,12 +150,12 @@
   </data>
   <data name="litText2Resource1.Text" xml:space="preserve">
     <value>Esta sección enlaza la membresía de los usuarios de Active Directory a su nivel de acceso en el sistema.Los
-&lt;a href="../help.aspx"&gt;permisos del sistema son explicados aquí.&lt;/a&gt;.
+&lt;a href="../help.aspx"&gt;permisos del sistema son explicados aquí&lt;/a&gt;.
 &lt;br /&gt;&lt;br /&gt;
 &lt;span class="bold"&gt;Agregar Grupo&lt;/span&gt; - Este botón le permite agregar un nuevo Grupo en el sistema. Este Grupo ya debe ser parte de Active Directory.
 A todos los usuarios que son miembros de un grupo específico les será otorgado ese correspondiente nivel de acceso, teniendo prioridad el más alto.
 &lt;br /&gt;&lt;br /&gt;
-&lt;span class="bold"&gt;Actualizar AD&lt;/span&gt; - Debido al gran tamaño de muchos  forests de AD (este forest tiene &lt;%= utils.settings.get("ad_groups") %&gt;) los grupos son almacenados en una caché (un .xml local) en vez de consultar AD en cada logon.
+&lt;span class="bold"&gt;Actualizar AD&lt;/span&gt; - Debido al gran tamaño de muchos  forests de AD (este forest tiene &lt;%= Utils.Settings.Get("ad_groups") %&gt;) los grupos son almacenados en una caché (un .xml local) en vez de consultar AD en cada logon.
 Esto incrementa el rendimiento del sistema, pero no reconocerá grupos nuevos/eliminados en AD hasta que este botón sea presionado para actualizar la caché.</value>
   </data>
   <data name="litText3Resource1.Text" xml:space="preserve">
@@ -168,11 +168,10 @@ Los
 &lt;span class="bold"&gt;Agregar Grupo&lt;/span&gt; - Este botón le permite agregar un Grupo nuevo en el sistema.Un grupo no es nada más que un nivel superior de clasificación. Piénselo como si fuera una &amp;#39;carpeta&amp;#39; para contener los Sub-Grupos dentro.
 &lt;br /&gt;&lt;br /&gt;
 &lt;span class="bold"&gt;Agregar Sub-Grupo&lt;/span&gt; - Los Sub-Grupos son los que contienen a los usuarios, de donde estos son miembros.
-Si un Sub-Grupo obtiene un ticket asignado a él, un email será enviado a la dirección configurada en el campo  &amp;#39;Mail to&amp;#39; de ese Sub-Grupo
-Sub-groups also decide what you see in &lt;a href="../my_issues.aspx"&gt;my issues&lt;/a&gt;.</value>
+Si un Sub-Grupo obtiene un ticket asignado a él, un email será enviado a la dirección configurada en el campo  &amp;#39;e-mail de destino&amp;#39; de ese Sub-Grupo. Dependiendo del Sub-Grupo es lo que verá en &lt;a href="../my_issues.aspx"&gt;my issues&lt;/a&gt;.</value>
   </data>
   <data name="litText4Resource1.Text" xml:space="preserve">
-    <value>Esto es simplemente un área para ver y borrar usuarios como así también asignar/revocar privilegios.
+    <value>Es el área para ver y borrar usuarios como así también asignar/revocar privilegios.
 Con el fin de evitar un sistema inoperable, Usted no puede remover sus propios privilegios.
 &lt;br /&gt;&lt;br /&gt;
 En un esfuerzo para mantener el sistema tan simple como sea posible, no se agregaran usuarios desde la administración del sistema.
