--- a/SlickTicket.WebUI/App_LocalResources/es/ticket.aspx.es.resx
+++ b/SlickTicket.WebUI/App_LocalResources/es/ticket.aspx.es.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="btnCloseResource1.Text" xml:space="preserve">
     <value>Cerrar Ticket</value>
@@ -183,5 +183,8 @@
   </data>
   <data name="ViewOnly" xml:space="preserve">
     <value>Su nivel de acceso es demasiado bajo como para hacer algo más que ver tickets</value>
+  </data>
+  <data name="LimitedUser" xml:space="preserve">
+    <value>Usted no tiene acceso para ver este billete</value>
   </data>
 </root>
